--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "node-api-test",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "dev": "nodemon app.js"
+  },
   "repository": "https://github.com/jtandrelevicius/node-api-test.git",
   "author": "Jefferson Tiago <jtandrelevicius@gmail.com>",
   "license": "MIT",
